--- a/prueba.html
+++ b/prueba.html
@@ -1,7 +1,17 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="refresh" content="0;url='https://ebiz.pe/'">
-    </head>
-    <body>
-    </body>
-</html>
+<body>
+
+<h2>Redirect to a Webpage</h2>
+<p>The replace() method replaces the current document with a new one:</p>
+
+<button onclick="myFunction()">Replace document</button>
+
+<script>
+function myFunction() {
+  location.replace("https://www.ebiz.pe/")
+}
+</script>
+
+</body>
+</html> 
